test/official_tests/operator/add_nil_nil.lox
nil + nil; // error: {"line":1,"message":"Operator '+': incompatible types 'nil' and 'nil'","type":"RuntimeError"}
